[gd_scene load_steps=5 format=3 uid="uid://c7pupnlqku0qv"]

[ext_resource type="Script" uid="uid://dn3jwg7lx54gv" path="res://scripts/ui/AuthenticationScreen.gd" id="1_script"]
[ext_resource type="Theme" uid="uid://djqfj60k8kq6r" path="res://resources/TriassicTheme.tres" id="2_theme"]
[ext_resource type="Texture2D" uid="uid://ce201kx6kh82p" path="res://assets/habitat-transition/06 Forest.png" id="3_bg"]
[ext_resource type="Script" path="res://scenes/world/BackgroundScaler.gd" id="4_scaler"]

[node name="AuthenticationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("3_bg")
script = ExtResource("4_scaler")

[node name="LoginPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="LoginPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Triassic Evolution"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="LoginPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="LoginPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="EmailEdit" type="LineEdit" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordEdit" type="LineEdit" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="LoginBtn" type="Button" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
text = "LOGIN"

[node name="HSeparator" type="HSeparator" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="CreateAccountBtn" type="Button" parent="LoginPanel/VBoxContainer"]
layout_mode = 2
text = "CREATE ACCOUNT"

[node name="SignupPopup" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="SignupPopup"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "NEW ACCOUNT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SignupPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 80.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="NameEdit" type="LineEdit" parent="SignupPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Full Name"

[node name="DOBEdit" type="LineEdit" parent="SignupPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Date of Birth (YYYY-MM-DD)"

[node name="UsernameEdit" type="LineEdit" parent="SignupPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Username"

[node name="EmailEdit" type="LineEdit" parent="SignupPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Email"

[node name="PasswordEdit" type="LineEdit" parent="SignupPopup/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Password"
secret = true

[node name="Spacer" type="Control" parent="SignupPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RegisterBtn" type="Button" parent="SignupPopup/VBoxContainer"]
layout_mode = 2
text = "SIGN UP"

[node name="CancelBtn" type="Button" parent="SignupPopup/VBoxContainer"]
layout_mode = 2
text = "CANCEL"
